syntax = "proto3";

package crud_grpc;

service Service2{
    rpc GetList(Empty) returns (Posts);
    rpc GetById(PostId) returns(Post);
    rpc Update(PostUpdate) returns(Result);
    rpc Delete(PostId) returns(Empty);
}

message Empty{}

message PostId{
    int64 id = 1;
}

message Post{
    int64 id = 1;
    int64 userId = 2;
    string title = 3;
    string body = 4;
}

message Posts{
    repeated Post posts = 1;
}

message PostUpdate{
    int64 id = 1;
    string title = 2;
    string body = 3;
}

message Result{
    bool success = 1;
    string message = 2;
}
